fix 27.03.22: new nav placement on mobile

--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -25,8 +25,12 @@ footer p {
     .footer-block {
         padding-right: 18px;
         padding-left: 18px;
+    }
+    .footer-block:first-child {
         margin-bottom: 1em;
     }
+}
+@media (max-width: 540px){
 }
 .footer-links{
     text-align: right;
