--- a/src/css/colors.css
+++ b/src/css/colors.css
@@ -1,7 +1,7 @@
 :root, body.light {
     --bg-page: #f2ede8;
     --bg-nav: #f6f6fcd7;
-    --bg-card: #fcf9f6;
+    --bg-card: #ffffffb0;
 
     --card-box-shadow__up: #fcf6f1;
     --card-box-shadow__down: #e8e4df;
