--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,11 +11,9 @@ body{
 body::-webkit-scrollbar {
     width: .5em;
 }
-
 body::-webkit-scrollbar-track {
     background: var(--bg-card);
 }
-
 body::-webkit-scrollbar-thumb {
     background: transparent;
     background-color: var(--dark-blue);
@@ -26,6 +24,14 @@ body::-webkit-scrollbar-thumb:hover {
     background-color: var(--link-main);
     border-radius: .1em;
 }
+
+@media (max-width: 540px) {
+    body {
+        padding-top: 0;
+        padding-bottom: 60px;
+    }
+}
+
 input, textarea, button, select, a {
   -webkit-tap-highlight-color: #00000000;
 }
